style.css
/* ... */
.btnVerseNext:hover, .btnVersePrev:hover {
    background-color: #eefaf7;
}

.btnVisOn:hover, .btnVisOff:hover {
    background-color: #eefaf7;
}

.clickWordHidden:hover, .clickRootHidden:hover, .clickMeaningHidden:hover {
    cursor: pointer;
    /* dot grid
    --dot-bg: #eef5f5;
    --dot-color: #888077;
    --dot-size: 1px;
    --dot-space: 4px; */
    background: radial-gradient(circle, #748383 10%, transparent 11%) 0% 0% / 0.35em 0.35em, radial-gradient(circle at left bottom, #748383 5%, transparent 6%), radial-gradient(circle at right bottom, rgb(100, 100, 100) 5%, transparent 6%), radial-gradient(circle at left top, rgb(100, 100, 100) 5%, transparent 6%), radial-gradient(circle at right top, rgb(100, 100, 100) 5%, transparent 6%);
    background-size: .35em .35em;
    background-color:  #ffffff; /* Added this line */
}

/* card interaction */


.clickWordHidden {
    display: flex;
    padding: 10px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex: 1 0 0;
    align-self: stretch;
    border-radius: 3px 0px 0px 0px;
    border-top: 2px solid #000;
    border-right: 0.5px solid #000;
    border-left: 2px solid #000;
    /* dot grid */
    /* --dot-bg: #f2f0ea;
    --dot-color: #000000;
    --dot-size: 1px;
    --dot-space: 4px; */
    background: radial-gradient(circle, #596464 10%, transparent 11%) 0% 0% / 0.35em 0.35em, radial-gradient(circle at left bottom, #596464 5%, transparent 6%), radial-gradient(circle at right bottom, rgb(0, 0, 0) 5%, transparent 6%), radial-gradient(circle at left top, rgb(0, 0, 0) 5%, transparent 6%), radial-gradient(circle at right top, rgb(0, 0, 0) 5%, transparent 6%);
    background-size: .35em .35em;
    background-color: #fefcf8; /* Added this line */
}

.clickRootHidden {
    display: flex;
    padding: 10px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex: 1 0 0;
    align-self: stretch;
    border-radius: 0px 4px 0px 0px;
    border-top: 2px solid #000;
    border-right: 2px solid #000;
    /* dot grid */
    /* --dot-bg: #f2f0ea;
    --dot-color: #000000;
    --dot-size: 1px;
    --dot-space: 4px; */
    background: radial-gradient(circle, #596464 10%, transparent 11%) 0% 0% / 0.35em 0.35em, radial-gradient(circle at left bottom, #596464 5%, transparent 6%), radial-gradient(circle at right bottom, rgb(0, 0, 0) 5%, transparent 6%), radial-gradient(circle at left top, rgb(0, 0, 0) 5%, transparent 6%), radial-gradient(circle at right top, rgb(0, 0, 0) 5%, transparent 6%);
    background-size: .35em .35em;
    background-color: #fefcf8; /* Added this line */
}

.clickMeaningHidden {
    display: flex;
    padding: 24px 40px 32px 40px;
    justify-content: center;
    align-items: flex-start;
    gap: 10px;
    flex: 1 0 0;
    align-self: stretch;
    border-radius: 0px 0px 3px 3px;
    border-top: 0.5px solid #000;
    border-right: 2px solid #000;
    border-bottom: 2px solid #000;
    border-left: 2px solid #000;
    /* dot grid */
    /* --dot-bg: #f2f0ea;
    --dot-color: #000000;
    --dot-size: 1px;
    --dot-space: 4px; */
    background: radial-gradient(circle, #596464 10%, transparent 11%) 0% 0% / 0.35em 0.35em, radial-gradient(circle at left bottom, #596464 5%, transparent 6%), radial-gradient(circle at right bottom, rgb(0, 0, 0) 5%, transparent 6%), radial-gradient(circle at left top, rgb(0, 0, 0) 5%, transparent 6%), radial-gradient(circle at right top, rgb(0, 0, 0) 5%, transparent 6%);
    background-size: .35em .35em;
    background-color: #fefcf8; /* Added this line */
}

.spanHidden {
    display:none;
}

/*
.clickWord {
    background: radial-gradient(circle, #000000 10%, transparent 11%),
    radial-gradient(circle at bottom left, #000000 5%, transparent 6%),
    radial-gradient(circle at bottom right, #000000 5%, transparent 6%),
    radial-gradient(circle at top left, #000000 5%, transparent 6%),
    radial-gradient(circle at top right, #000000 5%, transparent 6%);
    background-size: .35em .35em;
}*/
/* ... */

